--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # make sure that systemd-timesyncd is installed
 - name: Ensure systemd-timesyncd is installed
-  ansibple.builtin.package:
+  ansible.builtin.package:
     name: systemd-timesyncd
     state: present
 
